--- a/viewres.man
+++ b/viewres.man
@@ -25,7 +25,7 @@
 .\" other dealings in this Software without prior written authorization
 .\" from the X Consortium.
 .\"
-.\" $XFree86$
+.\" $XFree86: xc/programs/viewres/viewres.man,v 1.4 2003/03/19 01:49:28 dawes Exp $
 .\"
 .TH VIEWRES 1 __xorgversion__
 .SH NAME
